2005-05-13  Roland Illig  <roland.illig@gmx.de>

	* ftpfs.c: Using HAVE_SOCKLEN_T instead of HAVE_C_TYPE_SOCKLEN_T.

2005-05-11  Pavel Roskin  <proski@gnu.org>

	* samba/lib/util_sock.c: Fix gcc 4.0 warnings.

	* samba/lib/debug.c (dbghdr): Constify arguments file and func.

2005-05-10  Pavel Roskin  <proski@gnu.org>

	* utilvfs.c: Fix gcc 4.0 warnings.

	* samba/include/includes.h: Don't include grp.h twice.

2005-04-21  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* utilvfs.c (is_localized_month): Check "month" for NULL and
	forbid punctuation characters in localized month abbreviation.

2005-04-13  Roland Illig  <roland.illig@gmx.de>

	* vfs.h: Fixed prototypes for mc_read() and mc_write(). Now they
	get void * instead of char *.
	* vfs.c: Likewise.

2005-03-31  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* extfs/uarj.in (mcarjfs_copyout): Use the regular extract command,
	instead of redirecting all the output of the print (p) command.

	From w.v.velzen@sercom.nl

2005-03-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* samba/param/loadparm.c: Remove init_locals(), lp_smb_passwd_file(),
	lp_passwd_program(), lp_passwd_chat(), lp_unix_password_sync(),
	lp_max_open_files(), lp_shmem_size(), lp_lpqcachetime(),
	lp_syslog(), lp_driverlocation().
	(file_lists): Commented out.
	(add_to_file_list): Comment out and make a do nothing macro.

2005-03-29  Pavel Roskin  <proski@gnu.org>

	* cpio.c (cpio_find_head): Fix for logical error that can cause
	crash on broken cpio archives.

2005-02-22  Roland Illig  <roland.illig@gmx.de>

	* *.c: Declared unused variables with (void) to avoid the gcc
	warnings.
	* extfs.c (extfs_get_path_mangle, extfs_get_path): Removed unused
	parameter.
	* ftpfs.c (ftpfs_netrc_bad_mode): Likewise.
	* vfs.c (mc_def_getlocalcopy): Likewise.

2005-02-19  Roland Illig  <roland.illig@gmx.de>

	* utilvfs.h: Removed unneeded #includes.
	* *.c: Added the #includes that have been removed from utilvfs.h.
	* tcputil.c: Just removed the unneeded #include "utilvfs.h".
